--- a/style.css
+++ b/style.css
@@ -47,14 +47,14 @@ header.section_one_header nav > ul > li > a{
 
 
 .text_section_one{
-    margin-top: 100px;
+    margin-top: 90px;
     padding-left: 23%;
 }
 
 .text_section_one h1{
     color: aliceblue;
     line-height: 1.2;
-    font-size: 60px;
+    font-size: 65px;
     font-weight: 300;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -64,22 +64,34 @@ header.section_one_header nav > ul > li > a{
 }
 
 .text_section_one p{
-    max-width: 200px;
+    max-width: 350px;
     padding-top: 12px;
     color: white;
     font-weight: 100; 
-    font-size:20px;
+    font-size:26px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container_button {
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 35px;
     border-radius: 5px;
     width: 300px;
     height:40px;
-    background:linear-gradient(#3778b0,#345470 );
+    background: linear-gradient(90deg, rgba(86,149,204,1) 0%, rgba(31,57,81,1) 99%);
 }
+
+.container_button:hover{
+    transform: translateY(-20px);
+}
+
+
+.container_button:hover{
+    transition: all .6s;
+  
+}
+
+
 
 .container_button h1{
     text-align: center;
@@ -116,7 +128,7 @@ header.section_one_header nav > ul > li > a{
 }
 
 .text_section_two h4{
-    font-size: 23px;
+    font-size: 21px;
     margin-top:16px;
     color: #3a3939;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -125,9 +137,8 @@ header.section_one_header nav > ul > li > a{
 
 .text_section_two p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
+    width: 341.3px;
     padding-top: 23px;
-    width: 400px;
     color: #3a3939;
 }
 
@@ -137,8 +148,9 @@ header.section_one_header nav > ul > li > a{
     border-radius: 5px;
     width: 250px;
     height:40px;
-    background:linear-gradient(#5695cc,#4f7596 );
+    background: linear-gradient(90deg, rgba(86,149,204,1) 0%, rgba(31,57,81,1) 99%);
 }
+
 
 .text_section_two .container_button h1{
     text-align: center;
@@ -159,7 +171,7 @@ header.section_one_header nav > ul > li > a{
 .contorno{
     width: 260px;
     height: 360px;
-    border: 2px solid #3778b0;
+    border: 2px solid rgba(86,149,204,1);
 }
 
 .img_dentro{
@@ -174,13 +186,12 @@ header.section_one_header nav > ul > li > a{
 
 .section_03{
     width: 100%;
-    height: 1600px;
+    height: 1400px;
 }
 
 
 
 .titulo_center{
-    padding-top: 23px;
     text-align: center;
     margin-left: 25%;
 }
@@ -204,7 +215,7 @@ header.section_one_header nav > ul > li > a{
     padding-top: 26px;
     margin-top: 53px;
     position: relative;
-    left: 28.2%;
+    left: 25%;
     width: 700px;
     height: 400px;
 
@@ -213,8 +224,8 @@ header.section_one_header nav > ul > li > a{
 .box_one{
     display: inline-flex;
     margin:  1%;
-    width: 160px; 
-    height: 70px;
+    width: 200px; 
+    height: 80px;
     border: 1px solid #f4f5f4;
     border-radius: 5px;
     background: hsla(208, 66%, 45%, 0.753);
@@ -222,10 +233,11 @@ header.section_one_header nav > ul > li > a{
 
 .box_one h1{
     padding: 23px 23%;
+    align-items: center;
     font-size: 16px;
     color: white;
     text-align: center;
-    font-weight: 200;
+    font-weight: 500;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -241,15 +253,19 @@ header.section_one_header nav > ul > li > a{
 
 .container_button_section03{
     cursor: pointer;
-    margin-left: 20%;
-    margin-top: 40px;
+    margin-left: 25%;
+    margin-top: 80px;
     border-radius: 5px;
     width: 250px;
     height:40px;
-    background:linear-gradient(#0088ff,#4f7596 );
+    background: linear-gradient(90deg, rgba(86,149,204,1) 0%, rgba(31,57,81,1) 99%);
 }
 
+.container_button_section03:hover{
+    transition: all .6s;
+    transform: translateY(-20px);
 
+}
 
 .container_button_section03 h1{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serift;
@@ -266,7 +282,7 @@ header.section_one_header nav > ul > li > a{
 }
 .sobre_text h1{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-top: 43px;
+    margin-top: 20%;
     font-size: 29px;
     font-weight: 400;
     color: white;
@@ -307,7 +323,7 @@ section.section_04{
     padding-top: 43px;
     font-size: 13px;
     font-weight: 100;
-    color: #295277;
+    color:rgba(86,149,204,1);
     text-align: center;
 }
 
@@ -333,7 +349,7 @@ section.section_04{
     margin:  1%;
     width: 350px; 
     height: 60%;
-    border: 3px  solid hsl(208, 66%, 45%);
+    border: 3px  solid rgba(86,149,204,1);
     border-radius: 5px;
     background: hsla(209, 11%, 41%, 0.753);
 }
@@ -343,7 +359,7 @@ section.section_04{
     margin:  1%;
     width: 350px; 
     height: 60%;
-    border: 3px solid hsl(208, 66%, 45%);
+    border: 3px solid  rgba(86,149,204,1);
     border-radius: 5px;
     background: hsla(207, 5%, 36%, 0.753);
 }
@@ -361,17 +377,21 @@ section.section_04{
     top: -150px;
     width: 250px;
     height:40px;
-    background:linear-gradient(#5695cc,#4f7596 );
-
+    background: linear-gradient(90deg, rgba(86,149,204,1) 0%, rgba(31,57,81,1) 99%);
 }
 
-
+.container_button_section04 h1{
+    text-align: center;
+    padding: 5px;
+    font-size: 20px;
+    font-weight: 400;
+    color: white;
+}
 
 .section05{
     width: 100%;
     height: 500px;
-    background: #3778b0;
-
+    background: linear-gradient(90deg, rgba(86,149,204,1) 0%, rgba(31,57,81,1) 99%);
 }
 
 .titulo_center_05{
@@ -479,7 +499,7 @@ section.section06{
     margin-top: 23px;
     width: 250px;
     height:40px;
-    background:linear-gradient(#5695cc,#4f7596 );
+    background: linear-gradient(90deg, rgba(86,149,204,1) 0%, rgba(31,57,81,1) 99%);
 }
 
 
@@ -490,7 +510,7 @@ section.section06{
 }
 
 .section07{
-    height: 500px;
+    height: 600px;
     background: #c5cdd4;
 }
 .titulo_center_07{
@@ -516,19 +536,18 @@ section.section06{
     position: relative;
     left: 25%;
     width: 50%;
-    height: 300px;
-    background: #ffffff;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    height: 350px;
+    background: #000000;
+    box-shadow: rgba(100, 100, 111, 0.16) 0px 7px 29px 0px;
 }
 
 .footer_01{
     width: 100%;
-    background:linear-gradient(#5695cc,#1f3951 );
+    background: linear-gradient(90deg, rgba(86,149,204,1) 0%, rgba(31,57,81,1) 99%);
 }
 .titulo_container h1{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-    padding-top: 10px;
     font-weight: 100;
     font-size: 23px;
     margin-left: 25%;
@@ -560,13 +579,13 @@ section.section06{
 
 footer{
     width: 100%;
-    height: 400px;
+    height: 300px;
     background: #212121;
 }
 
 .titulo_center_foter{
     float: left;
-    margin-top:10%;
+    margin-top:5%;
     margin-left: 25%;
 }
 
@@ -588,22 +607,22 @@ footer{
 
 
 .cotainer_instagram{
-    margin-top: 15%;
+    margin-top:5%;
     float: right;
     width: 250px;
     position:relative;
-    top: -50px;
+   
     left: -25%;
     border-radius: 5px;
     border: 2px solid #3778b0;
-    height: 100px;
-    background: #686565;
+    height: 140px;
+    background: #4f4b4b;
 }
 
 .cotainer_instagram p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: justify;
-    color: white;
-    padding: 10px 2%;
-
+    color: rgb(195, 195, 195);
+    padding: 10px 5%;
+    font-style: italic;
 }
